--- a/css/app.css
+++ b/css/app.css
@@ -63,10 +63,12 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    /*transition: transform 1s;*/
 }
 
 .deck .card.open {
-    transform: rotateY(0);
+    /*transform: rotateY(180deg);*/
+    transform: rotateY(0deg);
     background: #02b3e4;
     cursor: default;
 }
@@ -80,6 +82,15 @@ h1 {
     background: #02ccba;
     font-size: 33px;
 }
+
+/*.deck .card.wrong {
+    background-color: red;
+    animation-name: wrongShaking;
+    animation-duration:1s;
+}*/
+/*@keyframes wrongShaking{
+    from
+}*/
 
 /*
  * Styles for the Score Panel
