--- a/css/app.css
+++ b/css/app.css
@@ -63,12 +63,12 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
-    /*transition: transform 1s;*/
+    transition: transform 0.5s;
 }
 
 .deck .card.open {
     /*transform: rotateY(180deg);*/
-    transform: rotateY(0deg);
+    transform: rotateY(180deg);
     background: #02b3e4;
     cursor: default;
 }
