--- a/css/app.css
+++ b/css/app.css
@@ -26,6 +26,15 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+}
+
+.container .finish{
+	animation:finish 2s;
+}
+
+@keyframes finish{
+	100% {opacity: 0;background-color: white;}
 }
 
 h1 {
@@ -63,13 +72,11 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
-    transition: transform 0.5s;
-
+    transition: transform 0.3s;
 }
 
 .deck .card.open {
-    /*transform: rotateY(180deg);*/
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
     background: #02b3e4;
     cursor: default;
 }
@@ -84,14 +91,32 @@ h1 {
     font-size: 33px;
 }
 
-/*.deck .card.wrong {
+.deck .card.correct {
+    animation-name: correctEffect;
+    animation-duration:0.5s;
+}
+
+@keyframes correctEffect {
+	0% {transform:scale(1,1);transform-origin: center center;}
+	25% {transform:scale(1.3,0.7);transform-origin: center center;}
+	50% {transform:scale(0.8,1.2);transform-origin: center center;}
+	75% {transform:scale(1.1,0.9);transform-origin: center center;}
+	100% {transform:scale(1,1);transform-origin: center center;}
+
+}
+
+.deck .card.wrong {
     background-color: red;
-    animation-name: wrongShaking;
-    animation-duration:1s;
-}*/
-/*@keyframes wrongShaking{
-    from
-}*/
+    animation-name: wrongEffect;
+    animation-duration:0.4s;
+}
+@keyframes wrongEffect {
+	0% {transform:rotate(0deg);transform-origin:center bottom;}
+	20% {transform:rotate(-20deg);transform-origin:center bottom;}
+	50% {transform:rotate(2.5deg);transform-origin:center bottom;}
+	75% {transform:rotate(-10deg);transform-origin:center bottom;}
+	100% {transform:rotate(0deg);transform-origin:center bottom;}
+}
 
 /*
  * Styles for the Score Panel
