--- a/css/app.css
+++ b/css/app.css
@@ -19,23 +19,68 @@ body {
 body {
     background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
+    z-index:1;
 }
+
+.overlay1 {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    animation: fadeout 0.2s;
+    animation-fill-mode: forwards;
+    background-color: rgba(255,255,255,0);
+    z-index:10;
+    display:none;
+}
+
+@keyframes fadeout {
+	100% {
+		background-color: rgba(255,255,255,1);
+	}
+}
+
+.overlay2 {
+	font-family: 'Open Sans', sans-serif;
+    width: 309px;
+    text-align: center;
+    background-color: #FFFFFFFF;
+    z-index: 11;
+    display: none;
+    line-height: 8px;
+    position: absolute;
+    top: 200px;
+}
+
+.overlay2 h2 {
+	padding-bottom: 5px;
+}
+
+button.playAgain {
+    padding: 6px 20px;
+    background-color: #00B9A9;
+    color: #FFFFFF;
+    font-weight: 700;
+    border-radius: 5px;
+}
+
+hr {
+	color:#FFFFFF;
+}
+
+button.playAgain:hover{
+	cursor: pointer;
+}
+
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
 }
 
-.container .finish{
-	animation:finish 2s;
-}
+/* Standard syntax */
 
-@keyframes finish{
-	100% {opacity: 0;background-color: white;}
-}
 
 h1 {
     font-family: 'Open Sans', sans-serif;
@@ -58,6 +103,8 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 0 3em;
+    /*testing*/
+    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 }
 
 .deck .card {
@@ -110,6 +157,7 @@ h1 {
     animation-name: wrongEffect;
     animation-duration:0.4s;
 }
+
 @keyframes wrongEffect {
 	0% {transform:rotate(0deg);transform-origin:center bottom;}
 	20% {transform:rotate(-20deg);transform-origin:center bottom;}
