--- a/css/app.css
+++ b/css/app.css
@@ -22,7 +22,7 @@ body {
     z-index:1;
 }
 
-.overlay1 {
+.finishGameBkg_Overlay {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -39,19 +39,19 @@ body {
 	}
 }
 
-.overlay2 {
+.finishGameMsg_Overlay {
 	font-family: 'Open Sans', sans-serif;
     width: 309px;
     text-align: center;
     background-color: #FFFFFFFF;
     z-index: 11;
-    display: none;
     line-height: 8px;
     position: absolute;
     top: 200px;
+    display: none;
 }
 
-.overlay2 h2 {
+.finishGameMsg_Overlay h2 {
 	padding-bottom: 5px;
 }
 
@@ -63,11 +63,7 @@ button.playAgain {
     border-radius: 5px;
 }
 
-hr {
-	color:#FFFFFF;
-}
-
-button.playAgain:hover{
+button.playAgain:hover {
 	cursor: pointer;
 }
 
@@ -103,7 +99,6 @@ h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 0 3em;
-    /*testing*/
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 }
 
@@ -155,7 +150,7 @@ h1 {
 .deck .card.wrong {
     background-color: red;
     animation-name: wrongEffect;
-    animation-duration:0.4s;
+    animation-duration:0.3s;
 }
 
 @keyframes wrongEffect {
