code refactoring: enhance UI

--- a/css/app.css
+++ b/css/app.css
@@ -169,6 +169,8 @@ h1 {
     text-align: left;
     width: 345px;
     margin-bottom: 10px;
+    display:flex;
+    justify-content: space-between;
 }
 
 .score-panel .stars {
@@ -178,28 +180,36 @@ h1 {
     margin: 0 5px 0 0;
 }
 
-.score-panel .stars li {
+/*.score-panel .stars li {
     list-style: none;
     display: inline-block;
+}*/
+
+#repeat_btn, #play_btn:hover{
+    cursor: pointer; 
 }
 
-.score-panel .restart {
+#repeat_btn, #play_btn{
+    padding:5px;
+}
+
+/*.score-panel .restart {
     float: right;
     cursor: pointer;
     display: inline-block;
     padding-right: 10px;
-}
+}*/
 
-.score-panel .timeContainer {
+/*.score-panel .timeContainer {
 	float: right;
 	display: block;
 	position: inline;
 	padding-right: 50px;
-}
+}*/
 
-timeContainer.timer {
+/*timeContainer.timer {
 	padding:auto 5px;
-}
+}*/
 
 /*breakpoint for screen below 660px */
 @media screen and (max-width:660px) {
@@ -225,9 +235,9 @@ timeContainer.timer {
 		width:100vw;
 		font-size:4vw;
 	}
-	.score-panel .timeContainer{
+/*	.score-panel .timeContainer{
 		padding-right:4vw;
-	}
+	}*/
 	.finishGameMsg_Overlay {
 		width:100vw;
 	}
